--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,8 @@ body {
   display: flex;
   place-items: center;
   min-height: 100vh;
+  color: black;
+  background-color: white ;
 }
 
 h1 {
@@ -80,5 +82,12 @@ button:focus-visible {
 .scrollbar-hide {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+}
+
+@layer utilities {
+  .text-double-outline {
+    -webkit-text-stroke: 3px #ffdf2b;
+    color: transparent;
+  }
 }
 
